# pycon-concurrency-tutorial-2020

./: .gitignore  1. Thread Basics.ipynb  2. Thread Data & Race Conditions.ipynb  3. Deadlocks.ipynb  4. Producer-Consumer model.ipynb  5. The Python GIL.ipynb  6. Multiprocessing.ipynb  7. concurrent.futures.ipynb  8. Parallel.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt  sleep_n_seconds.py  threads_1.py
crypto-examples/: Create Database.ipynb  Download Crypto Data.ipynb  Example - Thread.ipynb  Example - concurrent.futures.ipynb  Insert in Database.ipynb  flask_app.py  prices.db
crypto-examples/crypto_data/: bitfinex_btc.csv  bitfinex_eth.csv  bitfinex_ltc.csv  bitstamp_btc.csv  bitstamp_eth.csv  bitstamp_ltc.csv  bittrex_btc.csv  bittrex_eth.csv  bittrex_ltc.csv  cexio_btc.csv  cexio_eth.csv  cexio_ltc.csv  coinbase-pro_btc.csv  coinbase-pro_eth.csv  coinbase-pro_ltc.csv  hitbtc_btc.csv  hitbtc_eth.csv  hitbtc_ltc.csv  huobi_btc.csv  huobi_eth.csv  huobi_ltc.csv  kraken_btc.csv  kraken_eth.csv  kraken_ltc.csv  mexbt_btc.csv  okex_btc.csv  okex_eth.csv  okex_ltc.csv  poloniex_btc.csv  poloniex_eth.csv  poloniex_ltc.csv
crypto-examples/templates/: index.html
data/: prime_mixture.txt
