[tool.poetry]
name = "pycon-concurrency-tutorial-2020"
version = "0.1.0"
description = ""
authors = ["Santiago Basulto <santiago.basulto@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.1.1"
flask = "^1.1.2"
pandas = "^1.0.3"
psutil = "^5.7.0"
python-parallel = "^0.9.0"

[tool.poetry.dev-dependencies]
ipython = "^7.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
